# redonly

./: .gitignore  README.md  element.html  pyproject.toml  red_only.py  self_image.html  self_post.html  style.css  sub.html  template.html
.github/workflows/: python-test.yml
docs/source/: Examples.rst  Gallery.rst  Reference.rst  conf.py  index.rst
src/redonly/: red_only.py  redonly.py
src/redonly/data/: style.css
src/redonly/data/en/: template.html
src/redonly/data/fr/: element.html  self_image.html  self_post.html  template.html
src/redonly/data/html/: element.html  self_image.html  self_post.html  template.html
src/redonly/data/locale/: en.txt  fr.txt
src/redonly/data/styles/: dark.css  minimal.css  original.css
tests/: test_redonly.py
