[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "redonly"
version = "0.5.0"
authors = [
  { name="Cyril Novel" },
]
description = "This package creates a static archive of subreddits page at present time."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "Markdown ~= 3.3.6",
    "Pillow ~= 10.0.0",
    "requests ~= 2.25.1",
    "StrEnum ~= 0.4.15",
    "Babel ~= 2.12.1",
]

[project.optional-dependencies]
tests = [
  "pytest ~= 7.4.0",
  "coverage ~= 7.2.7",
  "flake8 ~= 6.1.0",
]

[project.urls]
"Homepage" = "https://github.com/cnovel/RedOnly"
